get rid of scrollbars for fixedleft layout

--- a/src/layouts/FixedLeft/style.scss
+++ b/src/layouts/FixedLeft/style.scss
@@ -25,10 +25,12 @@
   min-height: 100%;
   background: $cBackground;
   overflow: auto;
+  &::-webkit-scrollbar { width: 0 !important }
   .stub {
     visibility: hidden;
     opacity: 0;
     flex: none;
+    &::-webkit-scrollbar { width: 0 !important }
   }
   .content {
     box-sizing: border-box;
@@ -36,5 +38,6 @@
     flex-grow: 1;
     overflow-x: auto;
     margin: 0 30px;
+    &::-webkit-scrollbar { width: 0 !important }
   }
 }
